[gd_scene load_steps=8 format=3 uid="uid://dbf51msig34f"]

[ext_resource type="Script" path="res://actors/ribosome.gd" id="1_5v7cl"]
[ext_resource type="Texture2D" uid="uid://dwe6ptu84vb54" path="res://assets/ribosome/ribo_2.png" id="1_ogwqq"]
[ext_resource type="PackedScene" uid="uid://ob0m8gyih8tk" path="res://actors/protein.tscn" id="2_000rl"]
[ext_resource type="Texture2D" uid="uid://edi6bqx07r3b" path="res://assets/ribosome/ribo_1.png" id="2_gmyg1"]
[ext_resource type="PackedScene" uid="uid://bwljq104cxvm" path="res://actors/lipid.tscn" id="4_0tmb1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nh32u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ogwqq")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ogwqq")
}, {
"duration": 1.0,
"texture": ExtResource("2_gmyg1")
}],
"loop": true,
"name": &"producing",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_40tue"]
radius = 60.0
height = 206.0

[node name="ribosome" type="RigidBody2D" groups=["ribosomes"]]
input_pickable = true
mass = 10.0
gravity_scale = 0.0
script = ExtResource("1_5v7cl")
protein_scene = ExtResource("2_000rl")
lipid_scene = ExtResource("4_0tmb1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_nh32u")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_40tue")
metadata/_edit_lock_ = true

[node name="ProcessTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="ProcessTimer" to="." method="timer_tick"]
